force-app/main/default/objects/SVMXA360__CONF_ExpressionBasedMapping__c/SVMXA360__CONF_ExpressionBasedMapping__c.object-meta.xml
<CustomObject>
    <description>Object to store expression based mapping info for Transaction Header and Child</description>
    <label>Expression Based Mapping</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Expression Based Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>