force-app/main/default/objects/SVMXA360__CONF_ExpressionBasedMapping__c/fields/SVMXA360__TransactionChild__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__TransactionChild__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to Transaction child for which expression based mapping details is stored</description>
    <label>Transaction Child</label>
    <referenceTo>SVMXA360__CONF_LayoutRelatedSection__c</referenceTo>
    <relationshipLabel>Expression Based Mappings</relationshipLabel>
    <relationshipName>ExpressionBasedMappings</relationshipName>
    <type>Lookup</type>
</CustomField>