force-app/main/default/objects/SVMXA360__CONF_ExpressionBasedMapping__c/fields/SVMXA360__TransactionElement__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__TransactionElement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to Transaction Element for which expression based mapping details is stored</description>
    <label>Transaction Element</label>
    <referenceTo>SVMXA360__CONF_LayoutElement__c</referenceTo>
    <relationshipLabel>Expression Based Mappings</relationshipLabel>
    <relationshipName>Expression_Based_Mappings</relationshipName>
    <type>Lookup</type>
</CustomField>